--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
    
 </head>
 <body>
-    <h1>Hello World</h1>
+    <main>
+        <section id="telefone">
+
+        </section>
+        <section id="redes-sociais">
+
+        </section>
+    </main>
 </body>
 </html>
