--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
+            <iframe src="home.html" name="tela" id="tela" frameborder="0">
+                <p>Seu navegador não é compatível com isso...</p>
+            </iframe>
         </section>
         <section id="redes-sociais">
-
+            <a href="#" target="tela"><img src="images/logo-home.jpg" alt="Home"></a> <br>
+            <a href="#" target="tela"><img src="images/logo-youtube.jpg" alt="Youtube"></a> <br>
+            <a href="#" target="tela"><img src="images/logo-github.jpg" alt="Github"></a> <br>
+            <a href="#" target="tela"><img src="images/logo-instagram.jpg" alt="Instagram"></a> <br>
+            <a href="#" target="tela"><img src="images/logo-twitter.jpg" alt="Twitter"></a> <br>
+            <a href="#" target="tela"><img src="images/logo-facebook.jpg" alt="Facebook"></a>
         </section>
     </main>
 </body>
